add mnist python files

--- a/notebook/MNIST_1FC_Softmax.ipynb
+++ b/notebook/MNIST_1FC_Softmax.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "# Parameters\n",
     "learning_rate = 0.1\n",
-    "training_epochs = 10\n",
+    "training_epochs = 2\n",
     "batch_size = 10\n",
     "display_step = 1\n",
     "log_step = 100\n",
@@ -82,11 +82,12 @@
     "# Encapsulating all ops into scopes, making Tensorboard's Graph visualization more convenient\n",
     "with tf.name_scope('Model'):\n",
     "    # Build model\n",
-    "    pred = build_model(x, weights, biases)\n",
-    "\n",
+    "    logits = build_model(x, weights, biases)\n",
+    "    pred = tf.nn.softmax(logits)\n",
+    "    \n",
     "with tf.name_scope('Loss'):\n",
     "    # Softmax Cross entropy (cost function)\n",
-    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y_))\n",
+    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits, y_), name = 'loss')\n",
     "    # NOTE:\n",
     "    # Since out_layer has NOT invoked softmax, leverage TF optimized function \n",
     "    # \"softmax_cross_entropy_with_logits\" to calculate cost\n",
@@ -94,12 +95,12 @@
     "with tf.name_scope('SGD'):\n",
     "    # Gradient Descent\n",
     "    optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
-    "    train_step = optimizer.minimize(loss)    \n",
+    "    train_op = optimizer.minimize(loss, name = 'train_op')    \n",
     "    \n",
     "with tf.name_scope('Accuracy'):\n",
     "    # Accuracy\n",
     "    accuracy = tf.equal(tf.argmax(pred, 1), tf.argmax(y_, 1))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(accuracy, tf.float32))\n"
+    "    accuracy = tf.reduce_mean(tf.cast(accuracy, tf.float32), name = 'accuracy')\n"
    ]
   },
   {
@@ -114,165 +115,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|#         | 1/10 [00:10<01:36, 10.75s/it]"
+      "100%|##########| 2/2 [00:23<00:00, 11.48s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, cost= 0.231783000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 20%|##        | 2/10 [00:21<01:26, 10.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 2, cost= 0.115254111\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 30%|###       | 3/10 [00:32<01:16, 10.89s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 3, cost= 0.081030620\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 40%|####      | 4/10 [00:44<01:06, 11.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 4, cost= 0.062940327\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 50%|#####     | 5/10 [00:56<00:56, 11.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 5, cost= 0.048606335\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 60%|######    | 6/10 [01:08<00:46, 11.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 6, cost= 0.038754055\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 70%|#######   | 7/10 [01:19<00:34, 11.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 7, cost= 0.032435848\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 80%|########  | 8/10 [01:30<00:22, 11.40s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 8, cost= 0.027153412\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 90%|######### | 9/10 [01:42<00:11, 11.30s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 9, cost= 0.020500572\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|##########| 10/10 [01:53<00:00, 11.38s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10, cost= 0.015467539\n",
       "Optimization Finished!\n",
-      "Model save in file: /Users/Winston/GitHub/tensorflow_playground/tensorflow_models/MNIST_1FC_Softmax/model-10epochs.ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.9723\n"
+      "Model save in file: /Users/Winston/GitHub/tensorflow_playground/tensorflow_models/MNIST_1FC_Softmax/model.ckpt-2\n",
+      "Test Accuracy: 0.9696\n"
      ]
     }
    ],
@@ -282,38 +134,38 @@
     "# Initializing the variables\n",
     "init = tf.initialize_all_variables()\n",
     "\n",
-    "saver = tf.train.Saver()\n",
+    "saver = tf.train.Saver(tf.all_variables())\n",
     "\n",
-    "train_cost_history, validation_cost_history, validation_accuracy_history = ([] for i in range(3))\n",
+    "#train_cost_history, validation_cost_history, validation_accuracy_history = ([] for i in range(3))\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    sess.run(init)\n",
     "    log_avg_costs = list()\n",
     "    # Training cycle\n",
     "    for epoch in tqdm(range(training_epochs), ascii=True): \n",
-    "        epoch_avg_cost = 0.\n",
+    "#        epoch_avg_cost = 0.\n",
     "        total_batch = int(mnist.train.num_examples / batch_size)\n",
     "        for i in range(total_batch):\n",
     "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
-    "            train_cost, _ = sess.run([loss, train_step], feed_dict={x: batch_xs, y_: batch_ys})\n",
-    "            epoch_avg_cost += train_cost / total_batch\n",
-    "            log_avg_costs.append(train_cost)\n",
+    "            train_cost, _ = sess.run([loss, train_op], feed_dict={x: batch_xs, y_: batch_ys})\n",
+    "#            epoch_avg_cost += train_cost / total_batch\n",
+    "#            log_avg_costs.append(train_cost)\n",
     "            if (i+1) % log_step == 0:\n",
-    "                train_cost_history.append(np.mean(log_avg_costs))\n",
-    "                log_avg_costs[:] = []\n",
+    "#                train_cost_history.append(np.mean(log_avg_costs))\n",
+    "#                log_avg_costs[:] = []\n",
     "                val_cost, val_accuracy = sess.run([loss, accuracy], feed_dict={x: mnist.validation.images, y_: mnist.validation.labels})\n",
-    "                validation_cost_history.append(val_cost)\n",
-    "                validation_accuracy_history.append(val_accuracy)\n",
+    "#                validation_cost_history.append(val_cost)\n",
+    "#                validation_accuracy_history.append(val_accuracy)\n",
     "        \n",
     "        # Display training cost & validation accuracy per epoch step\n",
-    "        if (epoch+1) % display_step == 0:\n",
-    "            print(\"Epoch: {}, cost= {:.9f}\".format(epoch+1, epoch_avg_cost))\n",
+    "#        if (epoch+1) % display_step == 0:\n",
+    "#            print(\"Epoch: {}, cost= {:.9f}\".format(epoch+1, epoch_avg_cost))\n",
     "\n",
     "    print(\"Optimization Finished!\")  \n",
-    "    save_path = saver.save(sess, models_path + '/model-10epochs.ckpt')\n",
+    "    save_path = saver.save(sess, models_path + '/model.ckpt', global_step=training_epochs)\n",
     "    print(\"Model save in file: %s\" % save_path)\n",
-    "    with open(models_path + '/history-10epochs.pickle', \"wb\") as f:\n",
-    "        pickle.dump((train_cost_history, validation_cost_history, validation_accuracy_history), f)\n",
+    "#    with open(models_path + '/history-10epochs.pickle', \"wb\") as f:\n",
+    "#        pickle.dump((train_cost_history, validation_cost_history, validation_accuracy_history), f)\n",
     "    \n",
     "    # Test model\n",
     "    # Calculate accuracy\n",
@@ -322,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -331,22 +183,164 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Model restored.\n",
-      "Test Accuracy: 0.9723\n"
+      "Tensor(\"Loss/loss:0\", shape=(), dtype=float32)\n",
+      "name: \"SGD/train_op\"\n",
+      "op: \"NoOp\"\n",
+      "input: \"^SGD/train_op/update_Variable/ApplyGradientDescent\"\n",
+      "input: \"^SGD/train_op/update_Variable_1/ApplyGradientDescent\"\n",
+      "input: \"^SGD/train_op/update_Variable_2/ApplyGradientDescent\"\n",
+      "input: \"^SGD/train_op/update_Variable_3/ApplyGradientDescent\"\n",
+      "\n",
+      "Test Accuracy: 0.9696\n",
+      "Validate Cost & Accuracy: 0.0954688 0.9702\n",
+      "Validate Cost & Accuracy: 0.0914922 0.9726\n",
+      "Validate Cost & Accuracy: 0.089764 0.973\n",
+      "Validate Cost & Accuracy: 0.0907149 0.9718\n",
+      "Validate Cost & Accuracy: 0.100955 0.9678\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 50%|#####     | 1/2 [00:08<00:08,  8.59s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validate Cost & Accuracy: 0.0939832 0.9716\n",
+      "Validate Cost & Accuracy: 0.0936531 0.972\n",
+      "Validate Cost & Accuracy: 0.0821052 0.9738\n",
+      "Validate Cost & Accuracy: 0.0919771 0.9734\n",
+      "Validate Cost & Accuracy: 0.0883844 0.9734\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|##########| 2/2 [00:16<00:00,  8.51s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization Finished!\n",
+      "Model save in file: /Users/Winston/GitHub/tensorflow_playground/tensorflow_models/MNIST_1FC_Softmax/model-epochs-6\n"
      ]
     }
    ],
    "source": [
-    "# Restore Model when needed\n",
-    "train_cost_history, validation_cost_history, validation_accuracy_history = ([] for i in range(3))\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from tqdm import tqdm\n",
+    "import pickle\n",
     "\n",
-    "saver = tf.train.Saver()\n",
+    "# Import MINST data\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "mnist = input_data.read_data_sets('MNIST_data', one_hot=True)\n",
+    "\n",
+    "# Parameters\n",
+    "training_epochs = 2\n",
+    "batch_size = 10\n",
+    "log_step = 1000\n",
+    "models_path = '/Users/Winston/GitHub/tensorflow_playground/tensorflow_models/MNIST_1FC_Softmax'\n",
+    "\n",
     "with tf.Session() as sess:\n",
-    "    saver.restore(sess, models_path + '/model-10epochs.ckpt')\n",
+    "    ckpt = tf.train.get_checkpoint_state(models_path)\n",
+    "    if ckpt and ckpt.model_checkpoint_path:\n",
+    "        #print(ckpt.model_checkpoint_path)\n",
+    "        persistenter = tf.train.import_meta_graph(ckpt.model_checkpoint_path + '.meta')\n",
+    "        persistenter.restore(sess, ckpt.model_checkpoint_path)\n",
+    "    else:\n",
+    "        print('No checkpoint file found')   \n",
+    "    \n",
+    "    #persistenter = tf.train.import_meta_graph(models_path + '/model-epochs-4.meta')\n",
+    "    #persistenter.restore(sess, models_path + '/model-epochs-4')\n",
     "    print(\"Model restored.\")\n",
-    "    print(\"Test Accuracy:\", sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))\n",
-    "    with open(models_path + '/history-10epochs.pickle', \"rb\") as f:\n",
-    "        train_cost_history, validation_cost_history, validation_accuracy_history = pickle.load(f)    "
+    "    #accuracy = tf.get_collection('accuracy')[0]\n",
+    "    accuracy = sess.graph.get_tensor_by_name('Accuracy/accuracy:0')\n",
+    "    loss = sess.graph.get_tensor_by_name('Loss/loss:0')\n",
+    "    print(loss)\n",
+    "    train_op = sess.graph.get_operation_by_name('SGD/train_op')\n",
+    "    print(train_op)\n",
+    "    x = sess.graph.get_tensor_by_name('InputData:0')\n",
+    "    y_ = sess.graph.get_tensor_by_name('LabelData:0')\n",
+    "    print(\"Test Accuracy:\", sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))    \n",
+    "\n",
+    "    # Training cycle\n",
+    "    for epoch in tqdm(range(training_epochs), ascii=True): \n",
+    "        total_batch = int(mnist.train.num_examples / batch_size)\n",
+    "        for i in range(total_batch):\n",
+    "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
+    "            train_cost, _ = sess.run([loss, train_op], feed_dict={x: batch_xs, y_: batch_ys})\n",
+    "            if (i+1) % log_step == 0:\n",
+    "                val_cost, val_accuracy = sess.run([loss, accuracy], feed_dict={x: mnist.validation.images, y_: mnist.validation.labels})\n",
+    "                print(\"Validate Cost & Accuracy:\", val_cost, val_accuracy)\n",
+    "    print(\"Optimization Finished!\")  \n",
+    "    save_path = persistenter.save(sess, models_path + '/model-epochs-6')\n",
+    "    print(\"Model save in file: %s\" % save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from tqdm import tqdm\n",
+    "import pickle\n",
+    "\n",
+    "# Import MINST data\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "mnist = input_data.read_data_sets('MNIST_data', one_hot=True)\n",
+    "\n",
+    "models_path = '/Users/Winston/GitHub/tensorflow_playground/tensorflow_models/MNIST_1FC_Softmax'\n",
+    "\n",
+    "# get all tensors' name with below list comprehension\n",
+    "# [tensor.name for tensor in tf.get_default_graph().as_graph_def().node]\n",
+    "# fetch tensor from graph using <name>:0 (0 refers to endpoint here)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    restorer = tf.train.import_meta_graph(models_path + '/model-epochs-6.meta')\n",
+    "    restorer.restore(sess, models_path + '/model-epochs-6')\n",
+    "    tf.train.write_graph(sess.graph.as_graph_def(), models_path, 'NN.pb', as_text=True)\n",
+    "    print(\"Model GraphDef protocol buffer written.\")\n",
+    "    \n",
+    "    accuracy = sess.graph.get_tensor_by_name('Accuracy/accuracy:0')\n",
+    "    x = sess.graph.get_tensor_by_name('InputData:0')\n",
+    "    y_ = sess.graph.get_tensor_by_name('LabelData:0')\n",
+    "    print(\"Test Accuracy:\", sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))\n"
    ]
   },
   {
