add variable-length sequence classification

--- a/notebook/rnn/RNN_Data_Pipeline.ipynb
+++ b/notebook/rnn/RNN_Data_Pipeline.ipynb
@@ -427,7 +427,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/Winston/workspace/LSTM/Sequence_test_3.tfr']\n",
+      "['/Users/Winston/workspace/LSTM/Sequence_labeling.tfr']\n",
       "('actual_lengths =', array([3, 3, 2, 4], dtype=int32))\n",
       "batch_size=4, time_steps=4\n",
       "('sequences = ', array([[[  1.,   1.,   1.,   1.,   1.],\n",
@@ -481,6 +481,7 @@
    "source": [
     "#############################################################\n",
     "## SequenceExample 3 [no use of context feature in TFR]\n",
+    "## For variable-length sequence labeling \n",
     "## Note:\n",
     "##      input feature is a float32 vector per time-step,\n",
     "##      input feature dimension is the same for all sequences,\n",
@@ -516,7 +517,7 @@
     "    return tf.train.SequenceExample(feature_lists=feature_lists)\n",
     "\n",
     "# Write all examples into a TFRecords file\n",
-    "output_file = os.path.join(os.getcwd(), 'Sequence_test_3.tfr')\n",
+    "output_file = os.path.join(os.getcwd(), 'Sequence_labeling.tfr')\n",
     "writer = tf.python_io.TFRecordWriter(output_file)\n",
     "for sequence, label_sequence in zip(sequences, label_sequences):\n",
     "    ex = make_sequence_example(sequence, label_sequence)\n",
@@ -529,7 +530,7 @@
     "\n",
     "BATCH_SIZE = 4\n",
     "\n",
-    "file_list = [os.path.join(os.getcwd(), 'Sequence_test_3.tfr')]\n",
+    "file_list = [os.path.join(os.getcwd(), 'Sequence_labeling.tfr')]\n",
     "print file_list\n",
     "file_queue = tf.train.string_input_producer(file_list, num_epochs=1)\n",
     "reader = tf.TFRecordReader()\n",
@@ -574,6 +575,169 @@
     "        print(e.error_code, e.message)\n",
     "    finally:\n",
     "        coord.request_stop()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/Winston/workspace/LSTM/Sequence_classification.tfr']\n",
+      "('actual_lengths =', array([3, 3, 2, 4], dtype=int32))\n",
+      "batch_size=4, time_steps=1\n",
+      "('sequences = ', array([[[  1.,   1.,   1.,   1.,   1.],\n",
+      "        [  2.,   3.,   4.,   5.,   6.],\n",
+      "        [  3.,   2.,   1.,   0.,  -1.],\n",
+      "        [  0.,   0.,   0.,   0.,   0.]],\n",
+      "\n",
+      "       [[  4.,   3.,   1.,   2.,   5.],\n",
+      "        [  5.,   5.,   5.,   5.,   5.],\n",
+      "        [  1.,   2.,   3.,   4.,   5.],\n",
+      "        [  0.,   0.,   0.,   0.,   0.]],\n",
+      "\n",
+      "       [[  1.,   0.,   0.,   0.,   1.],\n",
+      "        [  2.,   2.,   2.,   2.,   2.],\n",
+      "        [  0.,   0.,   0.,   0.,   0.],\n",
+      "        [  0.,   0.,   0.,   0.,   0.]],\n",
+      "\n",
+      "       [[  0.,   0.,   0.,   0.,   0.],\n",
+      "        [  2.,   1.,   0.,  -1.,  -2.],\n",
+      "        [  4.,   8.,  12.,  16.,  20.],\n",
+      "        [  7.,   7.,   7.,   0.,   1.]]], dtype=float32))\n",
+      "('labels = ', array([[2],\n",
+      "       [0],\n",
+      "       [1],\n",
+      "       [0]]))\n",
+      "('actual_lengths =', array([2, 5, 3], dtype=int32))\n",
+      "batch_size=3, time_steps=1\n",
+      "('sequences = ', array([[[ 9.,  9.,  9.,  9.,  9.],\n",
+      "        [ 8.,  8.,  1.,  1.,  1.],\n",
+      "        [ 0.,  0.,  0.,  0.,  0.],\n",
+      "        [ 0.,  0.,  0.,  0.,  0.],\n",
+      "        [ 0.,  0.,  0.,  0.,  0.]],\n",
+      "\n",
+      "       [[ 5.,  4.,  3.,  2.,  1.],\n",
+      "        [ 4.,  4.,  8.,  8.,  8.],\n",
+      "        [ 3.,  3.,  3.,  6.,  6.],\n",
+      "        [ 2.,  2.,  2.,  2.,  1.],\n",
+      "        [ 1.,  1.,  1.,  1.,  1.]],\n",
+      "\n",
+      "       [[ 3.,  0.,  3.,  0.,  3.],\n",
+      "        [ 6.,  8.,  3.,  1.,  1.],\n",
+      "        [ 9.,  9.,  9.,  9.,  8.],\n",
+      "        [ 0.,  0.,  0.,  0.,  0.],\n",
+      "        [ 0.,  0.,  0.,  0.,  0.]]], dtype=float32))\n",
+      "('labels = ', array([[0],\n",
+      "       [0],\n",
+      "       [1]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#############################################################\n",
+    "## SequenceExample 4 [no use of context feature in TFR]\n",
+    "## For variable-length sequence classification \n",
+    "## Note:\n",
+    "##      input feature is a float32 vector per time-step,\n",
+    "##      input feature dimension is the same for all sequences,\n",
+    "##      acutal time-steps may differ for each sequence\n",
+    "#############################################################\n",
+    "\n",
+    "### 1: serialize/write part \n",
+    "\n",
+    "import os\n",
+    "\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "FEATURE_SIZE_PER_TIMESTEP = 5\n",
+    "sequences = [[[1.,1.,1.,1.,1.], [2.,3.,4.,5.,6.], [3.,2.,1.,0.,-1.]], \n",
+    "              [[4.,3.,1.,2.,5.], [5.,5.,5.,5.,5.], [1.,2.,3.,4.,5.]], \n",
+    "              [[1.,0.,0.,0.,1.], [2.,2.,2.,2.,2.]], \n",
+    "              [[0.,0.,0.,0.,0.], [2.,1.,0.,-1.,-2.], [4.,8.,12.,16.,20.], [7.,7.,7.,0.,1.]], \n",
+    "              [[9.,9.,9.,9.,9.], [8.,8.,1.,1.,1.]], \n",
+    "              [[5.,4.,3.,2.,1.], [4.,4.,8.,8.,8.], [3.,3.,3.,6.,6.], [2.,2.,2.,2.,1.], [1.,1.,1.,1.,1.]], \n",
+    "              [[3.,0.,3.,0.,3.], [6.,8.,3.,1.,1.], [9.,9.,9.,9.,8.]]]\n",
+    "label_sequences = [2, 0, 1, 0, 0, 0, 1]\n",
+    "\n",
+    "# inputs: A list of input vectors, each input vector is a list of float32 (entries #: FEATURE_SIZE_PER_TIMESTEP)\n",
+    "# labels: A list of int64\n",
+    "def make_sequence_example(inputs, label):\n",
+    "    input_features = [tf.train.Feature(float_list=tf.train.FloatList(value=input_)) for input_ in inputs]\n",
+    "    label_features = [tf.train.Feature(int64_list=tf.train.Int64List(value=[label]))]\n",
+    "    feature_list = {\n",
+    "        'inputs': tf.train.FeatureList(feature=input_features),\n",
+    "        'label': tf.train.FeatureList(feature=label_features)\n",
+    "    }\n",
+    "    feature_lists = tf.train.FeatureLists(feature_list=feature_list)\n",
+    "    return tf.train.SequenceExample(feature_lists=feature_lists)\n",
+    "\n",
+    "# Write all examples into a TFRecords file\n",
+    "output_file = os.path.join(os.getcwd(), 'Sequence_classification.tfr')\n",
+    "writer = tf.python_io.TFRecordWriter(output_file)\n",
+    "for sequence, label_sequence in zip(sequences, label_sequences):\n",
+    "    ex = make_sequence_example(sequence, label_sequence)\n",
+    "    writer.write(ex.SerializeToString())\n",
+    "writer.close()\n",
+    "\n",
+    "\n",
+    "## 2: deserialize/read part\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "BATCH_SIZE = 4\n",
+    "\n",
+    "file_list = [os.path.join(os.getcwd(), 'Sequence_classification.tfr')]\n",
+    "print file_list\n",
+    "file_queue = tf.train.string_input_producer(file_list, num_epochs=1)\n",
+    "reader = tf.TFRecordReader()\n",
+    "_, serialized_example = reader.read(file_queue)\n",
+    "\n",
+    "# Define how to parse the example\n",
+    "sequence_features = {\n",
+    "    \"inputs\": tf.FixedLenSequenceFeature([FEATURE_SIZE_PER_TIMESTEP], dtype=tf.float32),\n",
+    "    \"label\": tf.FixedLenSequenceFeature([], dtype=tf.int64)\n",
+    "}\n",
+    " \n",
+    "# Parse the example\n",
+    "_, sequence = tf.parse_single_sequence_example(\n",
+    "    serialized=serialized_example,\n",
+    "    sequence_features=sequence_features)\n",
+    "actual_length = tf.shape(sequence[\"inputs\"])[0]\n",
+    "\n",
+    "# Batch the variable length tensor with dynamic padding\n",
+    "batch_lengths, batch_sequences, batch_labels = tf.train.batch(\n",
+    "    [actual_length, sequence[\"inputs\"], sequence[\"label\"]],\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    dynamic_pad=True,\n",
+    "    allow_smaller_final_batch=True,\n",
+    "    name=\"input_batching\")\n",
+    "\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    init_op = tf.group(tf.global_variables_initializer(),\n",
+    "                       tf.local_variables_initializer())\n",
+    "    sess.run(init_op)\n",
+    "    coord = tf.train.Coordinator()\n",
+    "    threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "    try: \n",
+    "        for i in range(2):\n",
+    "            lens, seqs, lbls = sess.run([batch_lengths, batch_sequences, batch_labels])\n",
+    "            print('actual_lengths =', lens)\n",
+    "            print('batch_size=%d, time_steps=%d' % (lbls.shape[0],lbls.shape[1]))\n",
+    "            print('sequences = ', seqs)\n",
+    "            print('labels = ', lbls)      \n",
+    "    except tf.errors.OutOfRangeError as e:\n",
+    "        print('Done')\n",
+    "        print(e.error_code, e.message)\n",
+    "    finally:\n",
+    "        coord.request_stop()\n",
+    "\n",
     "\n"
    ]
   }
