add some reference links

--- a/notebook/cnn/CNN_DownSampling_UpSampling.ipynb
+++ b/notebook/cnn/CNN_DownSampling_UpSampling.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "    if wd is not None:\n",
     "        weight_decay = tf.multiply(tf.nn.l2_loss(var), wd, name='weight_loss')\n",
-    "        tf.add_to_collection(wds, weight_decay)\n",
+    "        tf.add_to_collection(loss_grp, weight_decay)\n",
     "    return var\n",
     "\n",
     "\n",
@@ -591,7 +591,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# References:\n",
+    "http://cv-tricks.com/image-segmentation/transpose-convolution-in-tensorflow/\n",
+    "https://github.com/ljanyst/image-segmentation-fcn/blob/master/upscale.py\n",
+    "http://warmspringwinds.github.io/tensorflow/tf-slim/2016/11/22/upsampling-and-image-segmentation-with-tensorflow-and-tf-slim/    "
+   ]
   }
  ],
  "metadata": {
