--- a/notebook/cnn/CNN_Spatial_Transformation.ipynb
+++ b/notebook/cnn/CNN_Spatial_Transformation.ipynb
@@ -292,7 +292,7 @@
     "U = tf.stack([image1, image2], axis=0)\n",
     "# print(U.shape) # input_tensor\n",
     "\n",
-    "txf1 = np.array([[0.5, 0., -0.1], [0., 0.5, 0.2]]) # scale 2x and translate x by 20 (=0.1x400/2), y by -40 (=0.2x400/2)\n",
+    "txf1 = np.array([[0.5, 0., -0.1], [0., 0.5, 0.2]])\n",
     "txf2 = np.array([[0.6, 0., -0.25], [0., 0.5, -0.5]])\n",
     "# txf1 = np.array([[1., 0., -0.1], [0., 1., 0.2]])\n",
     "# txf2 = np.array([[1., 0., -0.25], [0., 1., -0.5]])\n",
